--- a/Lixo-Mestre/en.lproj/LixoPapao.storyboard
+++ b/Lixo-Mestre/en.lproj/LixoPapao.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="gwc-JE-nW5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="iqF-Mb-b3Z">
     <dependencies>
-        <deployment version="1792" defaultVersion="1808" identifier="iOS"/>
+        <deployment version="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -28,7 +28,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a87-qg-Xdr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="523" y="-32"/>
+            <point key="canvasLocation" x="499" y="-32"/>
         </scene>
         <!--MenuV Cperfil-->
         <scene sceneID="KJX-Yt-fhl">
@@ -664,6 +664,45 @@
             </objects>
             <point key="canvasLocation" x="523" y="728"/>
         </scene>
+        <!--PrimeiraVC-->
+        <scene sceneID="hHo-Ug-0hx">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ou4-mw-zyu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="iqF-Mb-b3Z" customClass="PrimeiraVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9v3-Il-B5o">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="toP-1M-ZQX">
+                                <rect key="frame" x="98" y="334" width="125" height="63"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="tela BT">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="5Zu-ED-0Wm" kind="popover" identifier="1stAoTabbar" popoverAnchorView="toP-1M-ZQX" id="PCb-UQ-mlu">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
+                                </connections>
+                            </button>
+                            <button opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="zzI-dz-CuK">
+                                <rect key="frame" x="105" y="231" width="110" height="63"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="login">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="gwc-JE-nW5" kind="custom" identifier="1stAoLogin" customClass="segueManero" id="v3v-es-HpX"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.91764705879999997" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-814" y="-850"/>
+        </scene>
         <!--LoginVC-->
         <scene sceneID="8PJ-lV-xyP">
             <objects>
@@ -743,6 +782,7 @@
                         </subviews>
                         <color key="backgroundColor" red="0.91764705879999997" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="bbW-v0-irC"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="buttomLogar" destination="Zxy-JD-x3K" id="dM6-YB-D9H"/>
@@ -1005,7 +1045,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QEx-rY-Iry" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1046" y="-32"/>
+            <point key="canvasLocation" x="1010" y="-32"/>
         </scene>
         <!--MapaVC-->
         <scene sceneID="87q-BI-bQy">
@@ -1553,4 +1593,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="PCb-UQ-mlu"/>
+    </inferredMetricsTieBreakers>
 </document>
