--- a/Lixo-Mestre/en.lproj/LixoPapao.storyboard
+++ b/Lixo-Mestre/en.lproj/LixoPapao.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="gwc-JE-nW5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="gwc-JE-nW5">
     <dependencies>
-        <deployment version="1792" identifier="iOS"/>
+        <deployment version="1792" defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -824,11 +824,11 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tirinha.png" id="w8M-FJ-ZI6">
-                                <rect key="frame" x="-1" y="0.0" width="320" height="62"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="nVS-6F-U4v" userLabel="Button - cancelar">
-                                <rect key="frame" x="10" y="20" width="30" height="30"/>
+                                <rect key="frame" x="16" y="26" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="seta.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -838,60 +838,60 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cadastro" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="pBN-ra-f8A">
-                                <rect key="frame" x="64" y="20" width="258" height="30"/>
+                                <rect key="frame" x="68" y="26" width="108" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Usuario.png" id="xav-NA-B5L">
-                                <rect key="frame" x="20" y="90" width="45" height="45"/>
+                                <rect key="frame" x="20" y="75" width="57" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="   nome" minimumFontSize="17" id="om1-js-nSG">
-                                <rect key="frame" x="64" y="90" width="236" height="45"/>
+                                <rect key="frame" x="77" y="75" width="220" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Email.png" id="dSb-7K-pJr">
-                                <rect key="frame" x="22" y="145" width="45" height="45"/>
+                                <rect key="frame" x="20" y="140" width="57" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="   e-mail" minimumFontSize="17" id="eeU-FU-jnE">
-                                <rect key="frame" x="64" y="145" width="236" height="45"/>
+                                <rect key="frame" x="77" y="140" width="220" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="senha.png" id="sGT-02-uva">
-                                <rect key="frame" x="20" y="200" width="45" height="45"/>
+                                <rect key="frame" x="20" y="205" width="57" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="   senha" minimumFontSize="17" id="nl3-gn-5LK">
-                                <rect key="frame" x="64" y="200" width="236" height="45"/>
+                                <rect key="frame" x="77" y="205" width="220" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="senha.png" id="D2A-5V-lZz">
-                                <rect key="frame" x="20" y="255" width="45" height="45"/>
+                                <rect key="frame" x="20" y="270" width="57" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="   confirmar senha" minimumFontSize="17" id="nNi-qX-Z6I">
-                                <rect key="frame" x="65" y="255" width="235" height="45"/>
+                                <rect key="frame" x="77" y="270" width="220" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="gPH-eg-qXE">
-                                <rect key="frame" x="20" y="347" width="280" height="57"/>
+                                <rect key="frame" x="20" y="335" width="280" height="57"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Cadastrar" image="botão.png">
+                                <state key="normal" image="btn_Cadastre-se.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -959,6 +959,7 @@
                                     <segment title="Satelite"/>
                                     <segment title="Hibrido"/>
                                 </segments>
+                                <color key="tintColor" red="0.0" green="0.49803921569999998" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="estiloMapa:" destination="dzc-HH-zak" eventType="valueChanged" id="bZJ-6X-Sjc"/>
                                 </connections>
@@ -1195,12 +1196,12 @@
         <image name="Tinder.png" width="30" height="30"/>
         <image name="Usuario.png" width="1971" height="2024"/>
         <image name="amarelo.png" width="1576" height="2019"/>
-        <image name="amigos.png" width="1476" height="2012"/>
+        <image name="amigos.png" width="94" height="94"/>
         <image name="azul.png" width="1576" height="2019"/>
         <image name="b1bbbe.png" width="1978" height="1978"/>
         <image name="botaoeditar.png" width="1389" height="2027"/>
-        <image name="botão.png" width="2022" height="414"/>
-        <image name="cadeado.png" width="2023" height="2023"/>
+        <image name="btn_Cadastre-se.png" width="458" height="94"/>
+        <image name="cadeado.png" width="126" height="115"/>
         <image name="conectar.png" width="2018" height="384"/>
         <image name="conectividade-03.png" width="920" height="210"/>
         <image name="confirmar.png" width="1742" height="1740"/>
@@ -1210,7 +1211,7 @@
         <image name="fundo.png" width="1568" height="2023"/>
         <image name="iconjoguinho.png" width="100" height="100"/>
         <image name="lixo papao desconectado.png" width="1576" height="2019"/>
-        <image name="login.png" width="2018" height="384"/>
+        <image name="login.png" width="493" height="94"/>
         <image name="logoo.png" width="1294" height="869"/>
         <image name="mapa-melhor$.png" width="51" height="51"/>
         <image name="mapa-melhorcoleta.png" width="51" height="51"/>
@@ -1226,7 +1227,7 @@
         <image name="verde.png" width="1576" height="2019"/>
         <image name="vermehlo.png" width="1576" height="2019"/>
         <image name="vidro.png" width="2023" height="2023"/>
-        <image name="x.png" width="2015" height="2015"/>
+        <image name="x.png" width="111" height="110"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
