--- a/Lixo-Mestre/en.lproj/LixoPapao.storyboard
+++ b/Lixo-Mestre/en.lproj/LixoPapao.storyboard
@@ -508,12 +508,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b1bbbe.png" id="Gm7-lt-gIm">
-                                <rect key="frame" x="50" y="20" width="150" height="150"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="69" sectionHeaderHeight="22" sectionFooterHeight="22" id="TXD-lm-7J6">
-                                <rect key="frame" x="0.0" y="214" width="320" height="304"/>
+                                <rect key="frame" x="0.0" y="179" width="320" height="339"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -548,7 +544,7 @@
                                 </connections>
                             </tableView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Usuario aqui" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Dpu-Jv-kRx">
-                                <rect key="frame" x="20" y="185" width="230" height="21"/>
+                                <rect key="frame" x="0.0" y="150" width="320" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -598,11 +594,15 @@
                                     <segue destination="69h-ZN-FXg" kind="unwind" identifier="unwindLogout" unwindAction="unwindToLogin:" id="yPz-qL-8VR"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b1bbbe.png" id="Gm7-lt-gIm">
+                                <rect key="frame" x="95" y="20" width="130" height="130"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" red="0.16078431369999999" green="0.50196078430000002" blue="0.72549019609999998" alpha="1" colorSpace="deviceRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Opções" image="canfig.png" id="BIX-bw-aOr"/>
+                    <tabBarItem key="tabBarItem" title="Opções" image="hamburguer.png" id="BIX-bw-aOr"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="MenuTableView" destination="TXD-lm-7J6" id="t1f-Ng-YEK"/>
@@ -1200,7 +1200,6 @@
         <image name="botaoeditar.png" width="1389" height="2027"/>
         <image name="btn_Cadastre-se.png" width="458" height="94"/>
         <image name="cadeado do jogo.png" width="165" height="165"/>
-        <image name="canfig.png" width="46" height="46"/>
         <image name="conectar.png" width="2018" height="384"/>
         <image name="confirmar.png" width="1742" height="1740"/>
         <image name="convidar.png" width="1726" height="2013"/>
@@ -1209,6 +1208,7 @@
         <image name="fundo lixos.png" width="552" height="712"/>
         <image name="fundo tab selecionado.png" width="65" height="50"/>
         <image name="garrafa - selecione o lixo.png" width="81" height="211"/>
+        <image name="hamburguer.png" width="30" height="28"/>
         <image name="iconjoguinho.png" width="100" height="100"/>
         <image name="lixo papao desconectado.png" width="1576" height="2019"/>
         <image name="login.png" width="493" height="94"/>
